modified:   Doxyfile 	renamed:    Equation.c -> Equation.cpp 	renamed:    main.c -> main.cpp

--- a/0.SqrEquation/doc/latex/_equation_8h.tex
+++ b/0.SqrEquation/doc/latex/_equation_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{_equation_8h}{}\doxysection{Equation.\+h File Reference}
-\label{_equation_8h}\index{Equation.h@{Equation.h}}
+\hypertarget{_equation_8h}{}\doxysection{D\+:/\+Git/\+Summer\+School2021/0.Sqr\+Equation/\+Equation.h File Reference}
+\label{_equation_8h}\index{D:/Git/SummerSchool2021/0.SqrEquation/Equation.h@{D:/Git/SummerSchool2021/0.SqrEquation/Equation.h}}
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$math.\+h$>$}\newline
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
