--- a/0.SqrEquation/doc/latex/_equation_8h_source.tex
+++ b/0.SqrEquation/doc/latex/_equation_8h_source.tex
@@ -1,4 +1,5 @@
 \hypertarget{_equation_8h_source}{}\doxysection{Equation.\+h}
+\label{_equation_8h_source}\index{D:/Git/SummerSchool2021/0.SqrEquation/Equation.h@{D:/Git/SummerSchool2021/0.SqrEquation/Equation.h}}
 \mbox{\hyperlink{_equation_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 }
