--- a/0.SqrEquation/doc/latex/struct_linear_equation_solution_status.tex
+++ b/0.SqrEquation/doc/latex/struct_linear_equation_solution_status.tex
@@ -38,4 +38,4 @@ struct for solving linear case.
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
+D\+:/\+Git/\+Summer\+School2021/0.\+Sqr\+Equation/\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
