--- a/0.SqrEquation/doc/latex/dir_72a343106c0758dd8a5a4388d87ce646.tex
+++ b/0.SqrEquation/doc/latex/dir_72a343106c0758dd8a5a4388d87ce646.tex
@@ -3,9 +3,9 @@
 \doxysubsection*{Files}
 \begin{DoxyCompactItemize}
 \item 
-file \mbox{\hyperlink{_equation_8c}{Equation.\+c}}
+file \mbox{\hyperlink{_equation_8cpp}{Equation.\+cpp}}
 \item 
 file \mbox{\hyperlink{_equation_8h}{Equation.\+h}}
 \item 
-file \mbox{\hyperlink{main_8c}{main.\+c}}
+file \mbox{\hyperlink{main_8cpp}{main.\+cpp}}
 \end{DoxyCompactItemize}
