--- a/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
+++ b/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
@@ -62,4 +62,4 @@ struct for solving quadratic case.
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
+D\+:/\+Git/\+Summer\+School2021/0.\+Sqr\+Equation/\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
